--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ h1{
 	text-align: center;
 	color: white;
 }
+h2{
+	font-size: 22px;
+	text-align: center;
+	color: white;
+}
 p{
 	font-size: 14px;
 	text-align: justify;
